# jenkins-tray

./: .vproject  CMakeLists.txt  README  config.h.in
src/: BuildParser.cpp  BuildParser.hh  CMakeLists.txt  Config.ui  Downloader.cpp  Downloader.hh  Menu.cpp  Menu.hh  Project.cpp  Project.hh  RSSParser.cpp  RSSParser.hh  Settings.cpp  Settings.hh  Tray.cpp  Tray.hh  jenkinsBuildEngine.cpp  jenkinsBuildEngine.hh  jenkinsBuildParser.cpp  jenkinsBuildParser.hh  jenkinsDownloader.cpp  jenkinsDownloader.hh  jenkinsEngine.cpp  jenkinsEngine.hh  jenkinsMenu.cpp  jenkinsMenu.hh  jenkinsParser.cpp  jenkinsParser.hh  jenkinsProject.cpp  jenkinsProject.hh  jenkinsRSSEngine.cpp  jenkinsRSSEngine.hh  jenkinsRSSParser.cpp  jenkinsRSSParser.hh  jenkinsStatus.cpp  jenkinsStatus.hh  jenkinsTray.cpp  jenkinsTray.hh  jenkinsTray.qrc  main.cpp
tests/: CMakeLists.txt  qsignaldumper.cpp  stub_Jenkins.cpp  stub_Jenkins.hh  stub_Settings.cpp  stub_Settings.hh  stub_Tray.cpp  stub_Tray.hh  test_helpers.cpp  test_helpers.hh  test_resources.qrc  test_simple.cpp
tests/data/: simple_rss.xml  simple_target_13.xml
